# relanotes_webview

./: .gitignore  Cargo.toml  run.sh  tsconfig.json
src/: README.txt  main.rs
src/front-end/: index.html  scripts.js  styles.css
src/front-end/scripts/: app.ts  second.ts  tools.ts
src/front-end/scripts/flow/: groups_view.ts  node_detailed_view.ts  subgroups_view.ts
src/front-end/scripts/flow/base/: flow_handler.ts  history_node.ts
src/front-end/scripts/flow/node_detailed_view/: node_detailed_view.ts  view.ts
src/front-end/scripts/tools/: commands.ts  html_creators.ts  requests_registry.ts  tools.ts
