[package]
name = "relanotes_webview"
version = "0.1.0"
authors = ["KoStard <rub099999720@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-view = "0.5.3"
serde_json = "1.0.41"
serde_derive = "1.0.102"
serde = "1.0.102"
relanotes_rs = { git="https://github.com/KoStard/relanotes_rs" }
dotenv = "0.9.0"
diesel = { version = "1.4.3", features = ["sqlite"] }
